<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/call"
          android:icon="@drawable/call_icon"
          android:title="@string/call_string" >
    <menu>
	    <item android:id="@+id/add"
    	      android:icon="@drawable/add_icon"
        	  android:title="@string/add_string" />
    	<item android:id="@+id/edit"
          	android:icon="@drawable/edit_icon"
          	android:title="@string/edit_string" />
    </menu>
    </item>
    <item android:id="@+id/camera"
          android:icon="@drawable/camera_icon"
          android:title="@string/camera_string" />
    <item android:id="@+id/exit"
          android:icon="@drawable/exit_icon"
          android:title="@string/exit_string" />
    <item android:id="@+id/trash"
          android:icon="@drawable/trash_icon"
          android:title="@string/trash_string" />
</menu>

