<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView android:id="@+id/test_scroll_view1"
    		  android:layout_width="fill_parent"
    		  android:layout_height="fill_parent">
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    		android:layout_width="fill_parent"
	    		android:layout_height="fill_parent"
	    		android:orientation="vertical"
	    		android:paddingRight="5px">
	    		
   		 <TextView 
    		 	android:textSize="40px"
    		 	android:textStyle="bold"
    		 	android:text="@string/text_view_string4"
    		 	android:layout_width="fill_parent"
    		  	android:layout_height="wrap_content"/>
    		  	
   		 <TextView 
    		 	android:textSize="40px"
    		 	android:textStyle="bold"
    		 	android:text="@string/text_view_string5"
    		 	android:layout_width="fill_parent"
    		  	android:layout_height="wrap_content"/>
    		  	
   		 <TextView 
    		 	android:textSize="40px"
    		 	android:textStyle="bold"
    		 	android:text="@string/text_view_string6"
    		 	android:layout_width="fill_parent"
    		  	android:layout_height="wrap_content"/>
    		  	
   		 <TextView 
    		 	android:textSize="40px"
    		 	android:textStyle="bold"
    		 	android:text="@string/text_view_string7"
    		 	android:layout_width="fill_parent"
    		  	android:layout_height="wrap_content"/>
	    </LinearLayout>
    </ScrollView>		  

</LinearLayout>