<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099CC"
    android:padding="8dip"
    >
<TextView  
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/activity_c_label"
    android:gravity="center_horizontal"
    android:textSize="44dp"
    android:textColor="#A8DFF4"
    android:paddingBottom="16dip"
    />


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
    <Button
        android:id="@+id/btn_start_a"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_start_a_label"
        android:onClick="startActivityA"
        />

    <Button
        android:id="@+id/btn_start_b"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_start_b_label"
        android:layout_toRightOf="@id/btn_start_a"
        android:onClick="startActivityB"
        />

    <Button
        android:id="@+id/btn_finish_c"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_finish_c_label"
        android:layout_toRightOf="@id/btn_start_b"
        android:onClick="finishActivityC"
        />

</RelativeLayout>


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/font_medium"
    android:text="@string/lifecycle_method_list"
    android:textColor="#A8DFF4"
    />

<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <TextView
        android:id="@+id/status_view_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:padding="4dip"
        android:typeface="monospace"
        />
</ScrollView>

</LinearLayout>

