<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/test_text_view1"
    		  android:textSize="16px"
    		  android:textStyle="bold"
    		  android:text="@string/text_view_string1"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"/>
    		  
    <TextView android:id="@+id/test_text_view2"
    		  android:textSize="10mm"
    		  android:textStyle="italic"
    		  android:typeface="normal"
    		  android:textColor="#ffffff"
    		  android:text="@string/text_view_string2"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"/>	
    		  	  
    <TextView android:id="@+id/test_text_view3"
    		  android:textSize="24pt"
    		  android:text="@string/text_view_string3"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"/>		  

</LinearLayout>