<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099CC"
    android:padding="8dip"
    >

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_a_label"
        android:gravity="center_horizontal"
        android:textSize="44dp"
        android:textColor="#A8DFF4"
        android:paddingBottom="16dip"
        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btn_start_b"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_start_b_label"
            android:onClick="startActivityB"
            /> 

        <Button
            android:id="@+id/btn_start_c"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_start_c_label"
            android:layout_toRightOf="@id/btn_start_b"
            android:onClick="startActivityC"
            />

        <Button
            android:id="@+id/btn_finish_a"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_finish_a_label"
            android:layout_toRightOf="@id/btn_start_c"
            android:onClick="finishActivityA"
            />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/lifecycle_method_list"
        android:textColor="#A8DFF4"
        />

    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
        <TextView
            android:id="@+id/status_view_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:padding="4dip"
            android:typeface="monospace"
            />
    </ScrollView>

</LinearLayout>

